# UNIR_CI_CD

./: README.md
A2/unir-test/: pyproject.toml
A2/unir-test/app/: api.py  calc.py  util.py
A2/unir-test/test/rest/: api_test.py
A2/unir-test/test/unit/: calc_test.py  util_test.py
