# Settings for black autoformatter (FIXME: we should just use a script with command-line options)
[tool.black]
exclude = "/src/(vendor)/"            # --exclude
fast = true                           # --fast
line-length = 160                     # -l 160
skip-string-normalization = true      # -S
verbose = true                        # -v
quite = true                          # -q 

[tool.poetry]
name = "unir-test"
version = "0.1.0"
description = ""
authors = ["Carlos Riggio Diéguez <99546442+CarlosRiggio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
